build/log/idf_py_stdout_output_23988
[1/13] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Espressif\frameworks\tcs3200\build\bootloader\esp-idf\esptool_py && D:\Espressif.\python_env\idf5.1_py3.11_env\Scripts\python.exe D:/Espressif/frameworks/esp-idf-v5.1.4/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Espressif/frameworks/tcs3200/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/11] Building C object esp-idf/TCS3200/CMakeFiles/__idf_TCS3200.dir/tcs3200.c.obj
FAILED: esp-idf/TCS3200/CMakeFiles/__idf_TCS3200.dir/tcs3200.c.obj 
ccache D:\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.4-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Espressif/frameworks/tcs3200/build/config -ID:/Espressif/frameworks/tcs3200/library/TCS3200 -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/esp_additions/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/esp_additions/arch/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/include/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/port/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/soc/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/hal/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_rom/include/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_rom/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/xtensa/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/freertos/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/esp32xx/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/esp32xx/include/arch -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/deprecated -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/analog_comparator/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/dac/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/gpio/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/gptimer/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/i2c/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/i2s/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/ledc/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/mcpwm/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/parlio/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/pcnt/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/rmt/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/sdio_slave/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/sdmmc/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/sigma_delta/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/spi/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/temperature_sensor/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/touch_sensor/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/twai/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/uart/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/usb_serial_jtag/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/touch_sensor/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_pm/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/Espressif/frameworks/tcs3200=. -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.1.4=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/TCS3200/CMakeFiles/__idf_TCS3200.dir/tcs3200.c.obj -MF esp-idf\TCS3200\CMakeFiles\__idf_TCS3200.dir\tcs3200.c.obj.d -o esp-idf/TCS3200/CMakeFiles/__idf_TCS3200.dir/tcs3200.c.obj -c D:/Espressif/frameworks/tcs3200/library/TCS3200/tcs3200.c
In file included from D:/Espressif/frameworks/tcs3200/library/TCS3200/tcs3200.h:5,
                 from D:/Espressif/frameworks/tcs3200/library/TCS3200/tcs3200.c:1:
D:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/deprecated/driver/pcnt.h:15:2: warning: #warning "legacy pcnt driver is deprecated, please migrate to use driver/pulse_cnt.h" [-Wcpp]
   15 | #warning "legacy pcnt driver is deprecated, please migrate to use driver/pulse_cnt.h"
      |  ^~~~~~~
D:/Espressif/frameworks/tcs3200/library/TCS3200/tcs3200.c: In function 'getColorName':
D:/Espressif/frameworks/tcs3200/library/TCS3200/tcs3200.c:54:25: error: 'TOLERANCE' undeclared (first use in this function)
   54 |     if (inRange(R, 255, TOLERANCE) && inRange(G, 0, TOLERANCE) && inRange(B, 0, TOLERANCE)) {
      |                         ^~~~~~~~~
D:/Espressif/frameworks/tcs3200/library/TCS3200/tcs3200.c:54:25: note: each undeclared identifier is reported only once for each function it appears in
D:/Espressif/frameworks/tcs3200/library/TCS3200/tcs3200.c:325:1: error: control reaches end of non-void function [-Werror=return-type]
  325 | }
      | ^
cc1.exe: some warnings being treated as errors
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
In file included from D:/Espressif/frameworks/tcs3200/library/TCS3200/tcs3200.h:5,
                 from D:/Espressif/frameworks/tcs3200/main/main.c:8:
D:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/deprecated/driver/pcnt.h:15:2: warning: #warning "legacy pcnt driver is deprecated, please migrate to use driver/pulse_cnt.h" [-Wcpp]
   15 | #warning "legacy pcnt driver is deprecated, please migrate to use driver/pulse_cnt.h"
      |  ^~~~~~~
ninja: build stopped: subcommand failed.
